--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "develop": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public -b main",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public -b gh-pages",
     "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest"
   },
   "devDependencies": {
