--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
     "@emotion/react": "latest",
     "@emotion/server": "latest",
     "@emotion/styled": "latest",
-    "@mui/icons-material": "^5.0.0",
+    "@mui/icons-material": "^5.2.5",
     "@mui/material": "next",
     "gatsby": "latest",
+    "gatsby-plugin-image": "^2.4.0",
+    "gatsby-plugin-mdx": "^3.4.0",
     "gatsby-plugin-react-helmet": "latest",
+    "gatsby-plugin-sharp": "^4.4.0",
+    "gatsby-source-filesystem": "^4.4.0",
+    "gatsby-transformer-remark": "^5.4.0",
+    "gatsby-transformer-sharp": "^4.4.0",
     "react": "latest",
     "react-dom": "latest",
     "react-helmet": "latest",
-    "react-responsive": "^9.0.0-beta.4"
+    "react-responsive": "^9.0.0-beta.5"
   },
   "scripts": {
     "develop": "gatsby develop",
